@@ Talking Chicken Updates    adjusted max width of intro slide    so when game name is really long, the slide isn't too wide    - Error flash on slide 1 now appears above overlay    - Fixed color behing 'Directory' when highlighted

--- a/public/stylesheets/sass/site_tutorial.scss
+++ b/public/stylesheets/sass/site_tutorial.scss
@@ -154,7 +154,7 @@ strong{
   position: relative;
 }
 .spotlight.nav-directory, .spotlight.user, .spotlight.nav-activity{
-  background: #660;
+  background: $hengage-bg;
   -moz-border-radius: 10em;
   -webkit-border-radius: 10em;
   border-radius: 10em;
@@ -198,6 +198,7 @@ strong{
   h2{
     font-size: 10mm;
     padding-bottom: 2mm;
+    max-width: 30ex;
   }
   a{
     color: $header-bg;
